[tool.poetry]
name = "stmp"
version = "0.3.0"
description = "stmp - The tool to manage your working hours"
authors = ["Hannes Ortmeier <ortmeier.hannes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlite-utils = "^3.35.2"
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stmp = 'stmp.main:main'