[tool.poetry]
name = "stmp"
version = "0.3.3"
description = "stmp - The tool to manage your working hours"
authors = ["Hannes Ortmeier <ortmeier.hannes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlite-utils = "^3.35.2"
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.3"
pytest = ">=7.4.3,<9.0.0"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.1,<0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stmp = 'stmp.main:main'